tests/neg/no-kind-polymorphism-anykind.scala
//> using options -Yno-kind-polymorphism

trait Foo[T <: AnyKind] // error: Not found: type AnyKind
